k8s/bes/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeName: bes
      containers:
        - name: radarr
          image: linuxserver/radarr:latest
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              memory: "64Mi"
            limits:
              memory: "512Mi"
      volumes:
        - name: config
          hostPath:
            path: /var/lib/k8s-state/radarr
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /srv/media
        - name: downloads
          hostPath:
            path: /srv/media/Downloads
