k8s/bes/radarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.sw1a1aa.uk`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
  tls:
    certResolver: letsencrypt
